Added a darker shade of blue

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -116,7 +116,7 @@ body {
   line-height: 1.5; }
 
 a {
-  color: #6891b1;
+  color: #3b739e;
   cursor: pointer;
   text-decoration: none;
   transition: none 86ms ease-out; }
@@ -389,10 +389,10 @@ a.has-text-dark:hover, a.has-text-dark:focus {
   color: #1c1c1c; }
 
 .has-text-primary {
-  color: #6891b1; }
+  color: #3b739e; }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #4e7898; }
+  color: #2d5879; }
 
 .has-text-info {
   color: #5da7a7; }
@@ -478,9 +478,9 @@ a.has-text-purple:hover, a.has-text-purple:focus {
     margin-bottom: 1.5rem; }
 
 a.box:hover, a.box:focus {
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #6891b1; }
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #3b739e; }
 a.box:active {
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #6891b1; }
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #3b739e; }
 
 .button {
   -moz-appearance: none;
@@ -536,8 +536,8 @@ a.box:active {
     border-color: #b5b5b5;
     color: #363636; }
   .button:focus, .button.is-focused {
-    border-color: #6891b1;
-    box-shadow: 0 0 0.5em rgba(104, 145, 177, 0.25);
+    border-color: #3b739e;
+    box-shadow: 0 0 0.5em rgba(59, 115, 158, 0.25);
     color: #363636; }
   .button:active, .button.is-active {
     border-color: #4a4a4a;
@@ -796,60 +796,60 @@ a.box:active {
         box-shadow: none;
         color: #f0f0f0; }
   .button.is-primary {
-    background-color: #6891b1;
+    background-color: #3b739e;
     border-color: transparent;
     color: #fff; }
     .button.is-primary:hover, .button.is-primary.is-hovered {
-      background-color: #608bad;
+      background-color: #386c95;
       border-color: transparent;
       color: #fff; }
     .button.is-primary:focus, .button.is-primary.is-focused {
       border-color: transparent;
-      box-shadow: 0 0 0.5em rgba(104, 145, 177, 0.25);
+      box-shadow: 0 0 0.5em rgba(59, 115, 158, 0.25);
       color: #fff; }
     .button.is-primary:active, .button.is-primary.is-active {
-      background-color: #5785a8;
+      background-color: #34658b;
       border-color: transparent;
       box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
       color: #fff; }
     .button.is-primary[disabled] {
-      background-color: #6891b1;
+      background-color: #3b739e;
       border-color: transparent;
       box-shadow: none; }
     .button.is-primary.is-inverted {
       background-color: #fff;
-      color: #6891b1; }
+      color: #3b739e; }
       .button.is-primary.is-inverted:hover {
         background-color: #f2f2f2; }
       .button.is-primary.is-inverted[disabled] {
         background-color: #fff;
         border-color: transparent;
         box-shadow: none;
-        color: #6891b1; }
+        color: #3b739e; }
     .button.is-primary.is-loading:after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-primary.is-outlined {
       background-color: transparent;
-      border-color: #6891b1;
-      color: #6891b1; }
+      border-color: #3b739e;
+      color: #3b739e; }
       .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined:focus {
-        background-color: #6891b1;
-        border-color: #6891b1;
+        background-color: #3b739e;
+        border-color: #3b739e;
         color: #fff; }
       .button.is-primary.is-outlined.is-loading:after {
-        border-color: transparent transparent #6891b1 #6891b1 !important; }
+        border-color: transparent transparent #3b739e #3b739e !important; }
       .button.is-primary.is-outlined[disabled] {
         background-color: transparent;
-        border-color: #6891b1;
+        border-color: #3b739e;
         box-shadow: none;
-        color: #6891b1; }
+        color: #3b739e; }
     .button.is-primary.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #6891b1; }
+        color: #3b739e; }
       .button.is-primary.is-inverted.is-outlined[disabled] {
         background-color: transparent;
         border-color: #fff;
@@ -1379,7 +1379,7 @@ input[type="submit"].button {
     border-color: #363636; }
   .input.is-primary,
   .textarea.is-primary {
-    border-color: #6891b1; }
+    border-color: #3b739e; }
   .input.is-info,
   .textarea.is-info {
     border-color: #5da7a7; }
@@ -1450,7 +1450,7 @@ input[type="submit"].button {
   position: relative;
   vertical-align: top; }
   .select:after {
-    border: 1px solid #6891b1;
+    border: 1px solid #3b739e;
     border-right: 0;
     border-top: 0;
     content: " ";
@@ -1529,7 +1529,7 @@ input[type="submit"].button {
   .select.is-dark select {
     border-color: #363636; }
   .select.is-primary select {
-    border-color: #6891b1; }
+    border-color: #3b739e; }
   .select.is-info select {
     border-color: #5da7a7; }
   .select.is-success select {
@@ -1597,7 +1597,7 @@ input[type="submit"].button {
   .help.is-dark {
     color: #363636; }
   .help.is-primary {
-    color: #6891b1; }
+    color: #3b739e; }
   .help.is-info {
     color: #5da7a7; }
   .help.is-success {
@@ -1897,7 +1897,7 @@ input[type="submit"].button {
     background-color: #363636;
     color: #f0f0f0; }
   .notification.is-primary {
-    background-color: #6891b1;
+    background-color: #3b739e;
     color: #fff; }
   .notification.is-info {
     background-color: #5da7a7;
@@ -1950,9 +1950,9 @@ input[type="submit"].button {
   .progress.is-dark::-moz-progress-bar {
     background-color: #363636; }
   .progress.is-primary::-webkit-progress-value {
-    background-color: #6891b1; }
+    background-color: #3b739e; }
   .progress.is-primary::-moz-progress-bar {
-    background-color: #6891b1; }
+    background-color: #3b739e; }
   .progress.is-info::-webkit-progress-value {
     background-color: #5da7a7; }
   .progress.is-info::-moz-progress-bar {
@@ -2001,7 +2001,7 @@ input[type="submit"].button {
   .table tr:hover {
     background-color: #fafafa; }
   .table tr.is-selected {
-    background-color: #6891b1;
+    background-color: #3b739e;
     color: #fff; }
     .table tr.is-selected a,
     .table tr.is-selected strong {
@@ -2064,7 +2064,7 @@ input[type="submit"].button {
     background-color: #363636;
     color: #f0f0f0; }
   .tag.is-primary {
-    background-color: #6891b1;
+    background-color: #3b739e;
     color: #fff; }
   .tag.is-info {
     background-color: #5da7a7;
@@ -2447,9 +2447,9 @@ input[type="submit"].button {
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
       background-color: #f0f0f0;
-      color: #6891b1; }
+      color: #3b739e; }
     .menu-list a.is-active {
-      background-color: #6891b1;
+      background-color: #3b739e;
       color: #fff; }
   .menu-list li ul {
     border-left: 1px solid #dbdbdb;
@@ -2507,11 +2507,11 @@ input[type="submit"].button {
   .message.is-primary {
     background-color: #f8fafc; }
     .message.is-primary .message-header {
-      background-color: #6891b1;
+      background-color: #3b739e;
       color: #fff; }
     .message.is-primary .message-body {
-      border-color: #6891b1;
-      color: #405464; }
+      border-color: #3b739e;
+      color: #2b4b63; }
   .message.is-info {
     background-color: #f8fbfb; }
     .message.is-info .message-header {
@@ -2753,7 +2753,7 @@ input[type="submit"].button {
   .nav-toggle:hover {
     background-color: #f0f0f0; }
   .nav-toggle.is-active span {
-    background-color: #6891b1; }
+    background-color: #3b739e; }
     .nav-toggle.is-active span:nth-child(1) {
       margin-left: -5px;
       transform: rotate(45deg);
@@ -2809,12 +2809,12 @@ a.nav-item {
     padding-top: calc(0.75rem - 1px); }
     .nav-item a.is-tab:hover,
     a.nav-item.is-tab:hover {
-      border-bottom-color: #6891b1;
+      border-bottom-color: #3b739e;
       border-top-color: transparent; }
     .nav-item a.is-tab.is-active,
     a.nav-item.is-tab.is-active {
-      border-bottom: 3px solid #6891b1;
-      color: #6891b1;
+      border-bottom: 3px solid #3b739e;
+      color: #3b739e;
       padding-bottom: calc(0.75rem - 3px); }
   @media screen and (min-width: 1000px) {
     .nav-item a.is-brand,
@@ -2963,7 +2963,7 @@ a.nav-item {
   .pagination-previous:focus,
   .pagination-next:focus,
   .pagination-link:focus {
-    border-color: #6891b1; }
+    border-color: #3b739e; }
   .pagination-previous:active,
   .pagination-next:active,
   .pagination-link:active {
@@ -2984,8 +2984,8 @@ a.nav-item {
   white-space: nowrap; }
 
 .pagination-link.is-current {
-  background-color: #6891b1;
-  border-color: #6891b1;
+  background-color: #3b739e;
+  border-color: #3b739e;
   color: #fff; }
 
 .pagination-ellipsis {
@@ -3077,7 +3077,7 @@ a.nav-item {
 .panel-list a {
   color: #4a4a4a; }
   .panel-list a:hover {
-    color: #6891b1; }
+    color: #3b739e; }
 
 .panel-block {
   align-items: center;
@@ -3094,10 +3094,10 @@ a.nav-item {
   .panel-block.is-wrapped {
     flex-wrap: wrap; }
   .panel-block.is-active {
-    border-left-color: #6891b1;
+    border-left-color: #3b739e;
     color: #363636; }
     .panel-block.is-active .panel-icon {
-      color: #6891b1; }
+      color: #3b739e; }
 
 a.panel-block,
 label.panel-block {
@@ -3151,8 +3151,8 @@ label.panel-block {
   .tabs li {
     display: block; }
     .tabs li.is-active a {
-      border-bottom-color: #6891b1;
-      color: #6891b1; }
+      border-bottom-color: #3b739e;
+      color: #3b739e; }
   .tabs ul {
     align-items: center;
     border-bottom: 1px solid #dbdbdb;
@@ -3206,8 +3206,8 @@ label.panel-block {
   .tabs.is-toggle li:last-child a {
     border-radius: 0 3px 3px 0; }
   .tabs.is-toggle li.is-active a {
-    background-color: #6891b1;
-    border-color: #6891b1;
+    background-color: #3b739e;
+    border-color: #3b739e;
     color: #fff;
     z-index: 1; }
   .tabs.is-toggle ul {
@@ -4062,7 +4062,7 @@ label.panel-block {
       .hero.is-dark .nav-menu .nav-item {
         border-top-color: rgba(240, 240, 240, 0.2); } }
   .hero.is-primary {
-    background-color: #6891b1;
+    background-color: #3b739e;
     color: #fff; }
     .hero.is-primary a:not(.button),
     .hero.is-primary strong {
@@ -4078,7 +4078,7 @@ label.panel-block {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
     @media screen and (max-width: 768px) {
       .hero.is-primary .nav-menu {
-        background-color: #6891b1; } }
+        background-color: #3b739e; } }
     .hero.is-primary a.nav-item,
     .hero.is-primary .nav-item a:not(.button) {
       color: rgba(255, 255, 255, 0.7); }
@@ -4100,12 +4100,12 @@ label.panel-block {
     .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #6891b1; }
+      color: #3b739e; }
     .hero.is-primary.is-bold {
-      background-image: linear-gradient(141deg, #4389a3 0%, #6891b1 71%, #7491bf 100%); }
+      background-image: linear-gradient(141deg, #256881 0%, #3b739e 71%, #3c6db7 100%); }
       @media screen and (max-width: 768px) {
         .hero.is-primary.is-bold .nav-menu {
-          background-image: linear-gradient(141deg, #4389a3 0%, #6891b1 71%, #7491bf 100%); } }
+          background-image: linear-gradient(141deg, #256881 0%, #3b739e 71%, #3c6db7 100%); } }
     @media screen and (max-width: 768px) {
       .hero.is-primary .nav-toggle span {
         background-color: #fff; }
