Fixed issue that causes nav-right to overflow to be hidden on wide-screen

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -70,7 +70,7 @@ a.nav-item
   max-width: 100%
   overflow: auto
   +widescreen
-    flex-basis: 0
+    flex-basis: auto
 
 .nav-left
   justify-content: flex-start
