Add is-halfheight to hero

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -142,6 +142,14 @@
       .hero-body
         padding-bottom: 18rem
         padding-top: 18rem
+  &.is-halfheight
+    min-height: 50vh
+    .hero-body
+      align-items: center
+      display: flex
+      & > .container
+        flex-grow: 1
+        flex-shrink: 1
   &.is-fullheight
     min-height: 100vh
     .hero-body
