added justified text alignment helper

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -59,6 +59,9 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 .has-text-right
   text-align: right
 
+.has-text-justified
+  text-align: justify
+
 @each $name, $pair in $colors
   $color: nth($pair, 1)
   .has-text-#{$name}
