Add min/max height/width to delete class size modifiers

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -74,12 +74,18 @@
   // Sizes
   &.is-small
     height: 16px
+    min-height: 16px
+    min-width: 16px
     width: 16px
   &.is-medium
     height: 24px
+    max-height: 24px
+    max-width: 24px
     width: 24px
   &.is-large
     height: 32px
+    max-height: 32px
+    max-width: 32px
     width: 32px
 
 =fa($size, $dimensions)
