Adding a dropdown feature

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3332,16 +3332,28 @@ input[type="submit"].button {
 
 .delete.is-small {
   height: 16px;
+  max-height: 16px;
+  max-width: 16px;
+  min-height: 16px;
+  min-width: 16px;
   width: 16px;
 }
 
 .delete.is-medium {
   height: 24px;
+  max-height: 24px;
+  max-width: 24px;
+  min-height: 24px;
+  min-width: 24px;
   width: 24px;
 }
 
 .delete.is-large {
   height: 32px;
+  max-height: 32px;
+  max-width: 32px;
+  min-height: 32px;
+  min-width: 32px;
   width: 32px;
 }
 
@@ -3502,6 +3514,121 @@ input[type="submit"].button {
 
 .card .media:not(:last-child) {
   margin-bottom: 0.75rem;
+}
+
+.dropdown, .dropup {
+  display: inline-block;
+  position: relative;
+}
+
+.dropdown.is-active > .dropdown-list, .dropup.is-active > .dropdown-list {
+  display: block;
+}
+
+.dropdown.is-active > a, .dropup.is-active > a {
+  outline: 0;
+}
+
+.is-dropdown::after {
+  border-left: 0.3rem solid transparent;
+  border-right: 0.3rem solid transparent;
+  border-top: 0.3rem solid;
+  content: "";
+  display: inline-block;
+  height: 0;
+  margin-left: 0.3rem;
+  vertical-align: middle;
+  width: 0;
+}
+
+.is-dropdown:focus {
+  outline: 0;
+}
+
+.dropup .is-dropdown::after {
+  border-bottom: 0.3rem solid;
+  border-top: 0;
+}
+
+.dropdown-list {
+  background-clip: padding-box;
+  background-color: #fff;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+  color: #4a4a4a;
+  display: none;
+  float: left;
+  font-size: 1rem;
+  left: 0;
+  list-style: none;
+  margin: 0.125rem 0 0;
+  min-width: 10rem;
+  padding: 0.4rem 0;
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  z-index: 1000;
+  white-space: nowrap;
+}
+
+.divider {
+  background: #dbdbdb;
+  height: 1px;
+  margin: 0.5rem 0;
+  overflow: hidden;
+}
+
+.dropdown-item {
+  background: none;
+  border: 0;
+  clear: both;
+  color: #4a4a4a;
+  display: block;
+  font-weight: 400;
+  padding: 0.4rem 1.5rem;
+  text-align: inherit;
+  width: 100%;
+}
+
+.dropdown-item:hover, .dropdown-item.is-active, .dropdown-item:active {
+  background-color: #f9f9f9;
+  text-decoration: none;
+}
+
+.dropdown-item.is-disabled, .dropdown-item:disabled {
+  background-color: transparent;
+  color: #7a7a7a;
+  cursor: not-allowed;
+}
+
+.dropdown-list-right {
+  left: auto;
+  right: 0;
+}
+
+.dropdown-list-left {
+  left: 0;
+  right: auto;
+}
+
+.dropdown-heading {
+  color: #b5b5b5;
+  display: block;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 0;
+  padding: 0.4rem 1.5rem;
+  white-space: nowrap;
+}
+
+.dropup .dropdown-list {
+  bottom: 100%;
+  margin-bottom: 0.125rem;
+  top: auto;
+}
+
+.nav-item.dropdown > .dropdown-list {
+  margin: 0 0.75rem;
 }
 
 .level-item {
@@ -4080,16 +4207,28 @@ input[type="submit"].button {
 
 .modal-close.is-small {
   height: 16px;
+  max-height: 16px;
+  max-width: 16px;
+  min-height: 16px;
+  min-width: 16px;
   width: 16px;
 }
 
 .modal-close.is-medium {
   height: 24px;
+  max-height: 24px;
+  max-width: 24px;
+  min-height: 24px;
+  min-width: 24px;
   width: 24px;
 }
 
 .modal-close.is-large {
   height: 32px;
+  max-height: 32px;
+  max-width: 32px;
+  min-height: 32px;
+  min-width: 32px;
   width: 32px;
 }
 
@@ -7122,11 +7261,7 @@ label.panel-block:hover {
   }
 }
 
-.hero.is-fullheight {
-  min-height: 100vh;
-}
-
-.hero.is-fullheight .hero-body {
+.hero.is-halfheight .hero-body, .hero.is-fullheight .hero-body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -7135,12 +7270,20 @@ label.panel-block:hover {
   display: flex;
 }
 
-.hero.is-fullheight .hero-body > .container {
+.hero.is-halfheight .hero-body > .container, .hero.is-fullheight .hero-body > .container {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
+}
+
+.hero.is-halfheight {
+  min-height: 50vh;
+}
+
+.hero.is-fullheight {
+  min-height: 100vh;
 }
 
 .section {
