Fixed titles to use default font colors

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -21,7 +21,7 @@ $subtitle-weight:   $weight-light !default
     vertical-align: middle
 
 .title
-  color: $title
+  // color: $title
   font-size: $title-size
   font-weight: $title-weight
   line-height: 1.125
@@ -38,7 +38,7 @@ $subtitle-weight:   $weight-light !default
       font-size: $size
 
 .subtitle
-  color: $subtitle
+  // color: $subtitle
   font-size: $subtitle-size
   font-weight: $subtitle-weight
   line-height: 1.25
