--- a/docs/sass/global.sass
+++ b/docs/sass/global.sass
@@ -5,6 +5,8 @@ svg
 $carbon-space: 15px
 
 #carbon
+  margin-left: auto
+  margin-right: auto
   max-width: 340px
   min-height: 120px + ($carbon-space * 2)
   padding: 0
@@ -12,8 +14,6 @@ $carbon-space: 15px
   &:hover
     box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $primary
   +tablet
-    margin-left: auto
-    margin-right: auto
     width: 340px
 
 #carbonads
@@ -25,10 +25,11 @@ $carbon-space: 15px
   .carbon-wrap
     position: relative
   .carbon-img
+    background: $background
     float: left
-    height: 130px
-    padding: 15px 0 15px 15px
-    width: 145px
+    height: 100px
+    margin: 15px 0 15px 15px
+    width: 130px
     img
       display: block
       height: 100px
