--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -1,6 +1,4 @@
-<div class="container">
-  {% include header.html %}
-</div>
+{% include navbar.html %}
 
 <section class="hero is-primary">
   <div class="hero-body">
@@ -21,7 +19,7 @@
           </a>
         </div>
         <div class="column is-narrow">
-          {% include carbon.html %}
+          <!-- {% include carbon.html %} -->
         </div>
       </div>
     </div>
