--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,16 +1,17 @@
+<div class="container">
 <nav class="navbar">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
       <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}" width="112" height="28">
     </a>
 
-    <a class="navbar-item">
+    <a class="navbar-item is-hidden-desktop">
       <span class="icon">
         <i class="fa fa-github"></i>
       </span>
     </a>
 
-    <a class="navbar-item">
+    <a class="navbar-item is-hidden-desktop">
       <span class="icon">
         <i class="fa fa-twitter"></i>
       </span>
@@ -69,7 +70,7 @@
         <a class="navbar-link">
           Blog
         </a>
-        <div class="navbar-dropdown" style="width: 18rem;">
+        <div class="navbar-dropdown" data-style="width: 18rem;">
           {% for post in site.posts %}
             <a class="navbar-item" href="{{ post.url }}">
               <div class="navbar-content">
@@ -83,7 +84,7 @@
           <hr class="navbar-divider">
           <div class="navbar-item">
             <div class="navbar-content">
-              <div class="level">
+              <div class="level is-mobile">
                 <div class="level-left">
                   <div class="level-item">
                     <strong>Stay up to date!</strong>
@@ -145,3 +146,4 @@
     </div>
   </div>
 </nav>
+</div>
