Add dropdown options

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -17,19 +17,19 @@
       </span>
     </a>
 
-    <div class="navbar-burger">
+    <div id="navBurger" class="navbar-burger">
       <span></span>
       <span></span>
       <span></span>
     </div>
   </div>
 
-  <div class="navbar-menu">
+  <div id="navMenu" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item">
         Home
       </a>
-      <div class="navbar-item has-dropdown">
+      <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           Docs
         </a>
@@ -56,17 +56,9 @@
           <div class="navbar-item">
             <div>version <p class="has-text-info">{{ site.version }}</p></div>
           </div>
-          <!-- <div class="navbar-item">
-            <a class="button is-primary" href="{{ site.download }}">
-              <span class="icon">
-                <i class="fa fa-download"></i>
-              </span>
-              <span>Download</span>
-            </a>
-          </div> -->
         </div>
       </div>
-      <div class="navbar-item has-dropdown">
+      <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           Blog
         </a>
